[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["Felipe <dasilva.felipex93@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^21.6b0"
isort = "^5.9.1"
Flask = "^2.0.1"
flake8 = "^3.9.2"
dynaconf = "^3.1.4"
Flask-WTF = "^0.15.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Migrate = "^3.0.1"
Flask-Login = "^0.5.0"
email-validator = "^1.1.3"
Flask-Bootstrap = "^3.3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
